# blink.pairs

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  build.rs  flake.nix  repro.lua
.github/workflows/: release.yaml
benches/: lib.rs
lua/blink/pairs/: init.lua  logger.lua  rust.lua  utils.lua  watcher.lua
lua/blink/pairs/config/: highlights.lua  init.lua  mappings.lua
lua/blink/pairs/highlight/: init.lua  matchparen.lua
lua/blink/pairs/mappings/: init.lua
lua/blink/pairs/mappings/wrap/: motion.lua  treesitter.lua
matcher/: Cargo.toml
matcher/src/: lib.rs  lookahead.rs
queries/rust/: blink.pairs.singlequote.scm
src/: buffer.rs  lib.rs
src/parser/: indent.rs  mod.rs  parse.rs  tokenize.rs
src/parser/matcher/: mod.rs  token.rs  token_type.rs
