[package]
name = "blink_pairs_parser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bench]]
harness = false
name = "lib"

[dependencies]
matcher-macros = { path = "matcher" }
mlua = { version = "0.11.6", features = ["luajit", "module"] }

[dev-dependencies]
criterion = "0.8.2"
pretty_assertions = "1.4.1"

[profile.release]
lto = true
codegen-units = 1
